# domaj

./: .dockerignore  .env.example  .gitignore  README.md  build.sh  docker-compose.dev.yaml  docker-compose.postgres.dev.yaml  docker-compose.postgres.yaml  docker-compose.test-versions.yaml  docker-compose.yaml  docker-compose.yml  domaj-agent.env.example  domaj-server.env.example  roadmap.txt  server.env  server.env.example  web.env
.github/workflows/: ci.yml  gitleaks.yml
domaj-agent/: .env.example  Cargo.toml  Dockerfile  agent.env  docker-compose.dev.yml  docker-compose.yml
domaj-agent/src/: docker.rs  main.rs
domaj-server/: Cargo.toml  Dockerfile
domaj-server/src/: config.rs  main.rs
domaj-server/src/api/: audit.rs  auth.rs  containers.rs  mod.rs  rate_limit.rs  registries.rs  servers.rs  settings.rs  stats.rs  websocket.rs
domaj-server/src/db/: mod.rs  models.rs
domaj-server/src/notifier/: email.rs  mod.rs  telegram.rs
domaj-server/src/registry/: docker_hub.rs  mod.rs
domaj-server/src/scheduler/: mod.rs
domaj-web/: Dockerfile  nginx.conf  package-lock.json  package.json  svelte.config.js  vite.config.js
domaj-web/src/: app.css  app.html
domaj-web/src/lib/: api.js
domaj-web/src/lib/components/: Toast.svelte
domaj-web/src/lib/stores/: auth.js  theme.js  toast.js  websocket.js
domaj-web/src/routes/: +layout.svelte  +page.svelte
domaj-web/src/routes/login/: +page.svelte
domaj-web/src/routes/logs/: +page.svelte
domaj-web/src/routes/registries/: +page.svelte
domaj-web/src/routes/servers/: +page.svelte
domaj-web/src/routes/servers/[id]/: +page.svelte
domaj-web/src/routes/settings/: +page.svelte
domaj-web/src/routes/updates/: +page.svelte
