[package]
name = "domaj-agent"
version = "1.0.0"
edition = "2021"
description = "Domaj - Docker Agent for remote servers"
authors = ["Louis"]

[dependencies]
# Web framework (minimal)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Docker client
bollard = "0.16"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
