[package]
name = "domaj-server"
version = "1.0.0"
edition = "2021"
description = "Domaj - Docker Maintenance Server"
authors = ["Louis"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for registries
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "pool", "builder"] }

# Scheduler
tokio-cron-scheduler = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
futures-util = "0.3"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# Rate limiting
tower_governor = "0.4"

[dev-dependencies]
tokio-test = "0.4"
